changed various spacing related issues

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -7,7 +7,7 @@
   --myPrimaryAccent: #203079;
   --myPrimaryAccentTransparent: #203079e6;
   --myPrimaryTransparent: #18569080;
-  --myPrimaryFakeBlur: #185690c4;
+  --myPrimaryFakeBlur: #185690e0;
   --myBannerBackground: #4b4b4b;
 
  --myNormalFontSize: 16px;
@@ -19,7 +19,6 @@
  --fontTitle: "Montserrat", sans-serif;
 
 }
-
 
 html, body{
   margin: 0;
@@ -157,6 +156,7 @@ nav ul li a:hover{
   nav{
     justify-content: space-around;
     flex-direction: column;
+    backdrop-filter: unset;
     background-color: var(--myPrimaryFakeBlur);
     font-family: var(--fontTitle);
   }
@@ -192,6 +192,7 @@ nav ul li a:hover{
     margin-bottom: 10px;
   }
   
+
 }
 
 h1, h2, h3, h4, h5{
@@ -201,6 +202,7 @@ h1, h2, h3, h4, h5{
 h1.sectionHeader{
   display: flex;  
   justify-content: space-around;
+  text-align: center;
   font-weight: bolder;
   padding:25px 0 25px 0;
   color: var(--myPrimaryTitle);
@@ -224,8 +226,9 @@ h1.sectionHeader{
   color: var(--myPrimaryTitle);
   font-size: clamp(20px, 8vw, 60px);
   font-weight: bold;
+  text-align: center;
   padding: 20px 0px;
-  /* text-align: center; */
+  
 }
 
 .aboutMeProfile{
@@ -233,6 +236,7 @@ h1.sectionHeader{
   align-items: center;
   padding: 20vh 0 0 0;
   margin: 0 20vw;
+
 }
 
 .aboutMeProfile > div{
@@ -254,7 +258,8 @@ h1.sectionHeader{
 
 #profileText{
   flex-direction: column;
-  justify-content: flex-start;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .gridList{
@@ -279,11 +284,19 @@ h1.sectionHeader{
     padding: 0 10vw 0 10vw;
     text-align: justify;
   }
-
   .aboutMeProfile{
     flex-direction: column;
+    margin: 0 20vw;
   }
-  
+  .profilePictureFrame{
+    margin: 0
+  } 
+}
+
+@media only screen and (max-width: 480px){
+  .aboutMeProfile{
+    margin: 0 5vw;
+  }
 }
 
 /* All Experiences */
@@ -346,7 +359,7 @@ h3.experiencePosition{
 
 @media only screen and (max-width: 480px){
   .experienceItem{
-    margin: 10px;
+    margin: 0 10vw;
   }
 }
 /* Projects */
